--- a/CLIENT SITE/cms-site/package.json
+++ b/CLIENT SITE/cms-site/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
+    "daisyui": "^4.12.2",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
