--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,11 @@ OPENAI_API_KEY= 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
 MIDTRANS_ID=G907057823
 MIDTRANS_CLIENT_KEY=SB-Mid-client-dhdiNxR2cmHLBbwZ
 MIDTRANS_SERVER_KEY=SB-Mid-server-wHpPsYKN5KXIArJWiHDAXzTv
-URL_SUPABASE= postgres://postgres.oehnbzuatkptqvdzhbap:x3znMNQtISUPmTvp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
-DB_SUPABASE= x3znMNQtISUPmTvp
+URL_SUPABASE=postgres://postgres.oehnbzuatkptqvdzhbap:$halinka23@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+DB_SUPABASE= YNY(s8cyJ&(6i,a
 
 
+
+
+# URL_SUPABASE=postgres://postgres.oehnbzuatkptqvdzhbap:x3znMNQtISUPmTvp@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+# SUPABASE_TOKEN= sbp_c096f7294c58a642634bdd2b9c9e3a28987f349d (JUNI)
