feat new db at supabase

--- a/server/.env
+++ b/server/.env
@@ -5,8 +5,8 @@ OPENAI_API_KEY= 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
 MIDTRANS_ID=G907057823
 MIDTRANS_CLIENT_KEY=SB-Mid-client-dhdiNxR2cmHLBbwZ
 MIDTRANS_SERVER_KEY=SB-Mid-server-wHpPsYKN5KXIArJWiHDAXzTv
-URL_SUPABASE=postgres://postgres.oehnbzuatkptqvdzhbap:Shalinka23@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
-DB_SUPABASE= YNY(s8cyJ&(6i,a
+URL_SUPABASE=postgres://postgres.oehnbzuatkptqvdzhbap:OdgrjGCOuAErLjqz@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+DB_SUPABASE= OdgrjGCOuAErLjqz
 
 
 
