--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,7 @@ OPENAI_API_KEY= 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
 MIDTRANS_ID=G907057823
 MIDTRANS_CLIENT_KEY=SB-Mid-client-dhdiNxR2cmHLBbwZ
 MIDTRANS_SERVER_KEY=SB-Mid-server-wHpPsYKN5KXIArJWiHDAXzTv
-URL_SUPABASE=postgres://postgres.oehnbzuatkptqvdzhbap:OdgrjGCOuAErLjqz@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+URL_SUPABASE=postgres://postgres.rwitwiuxpwalvtlsntmi:OdgrjGCOuAErLjqz@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 DB_SUPABASE= OdgrjGCOuAErLjqz
 
 
